# Breakdown

./: .breakdownignore  .editorconfig  .env.example  .gitignore  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODEL_LICENSE  Makefile  README.md  SECURITY.md  STYLE.md  mise.toml  mkdocs.yml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  issue-check.yml  release.yml
changelog/: README.md
clients/template/: README.md
clients/vscode/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
clients/vscode/extension-host/: .vscodeignore  esbuild.host.config.js  package.json  tsconfig.json
clients/vscode/extension-host/src/: commands.ts  extension.ts  message_types.ts  process_manager.ts  token_client.ts  webview_manager.ts
clients/vscode/webview/: esbuild.webview.config.js  package.json  tsconfig.json
clients/vscode/webview/src/: audio_player.ts  index.ts  livekit_room.ts  message_bridge.ts  mic_capture.ts
core/: .env.example  .gitignore  README.md  pyproject.toml
core/src/breakdown/: __init__.py  agent.py  cli.py  config.py  session.py  token_server.py
core/src/breakdown/indexer/: chunker.py  embedder.py  ignore.py  manifest.py  parser.py  registry.py  store.py
core/src/breakdown/providers/: llm.py  stt.py  tts.py
core/tests/: conftest.py
core/tests/fixtures/sample_project/src/: hello.py  unknown.xyz
core/tests/integration/: conftest.py  test_indexer_pipeline.py
core/tests/unit/: test_cli.py  test_config.py  test_session.py  test_token_server.py
core/tests/unit/indexer/: conftest.py  test_chunker.py  test_embedder.py  test_ignore.py  test_manifest.py  test_parser.py  test_store.py
core/tests/unit/providers/: test_llm.py  test_tts.py
deploy/: docker-compose.livekit.yml
docs/: architecture.md  contributing.md  getting-started.md  index.md  protocol.md  providers.md  supported-languages.md
docs/superpowers/plans/: 2026-06-24-plan-a-python-core.md  2026-06-24-plan-b-vscode-extension.md  2026-06-24-plan-c-repo-infrastructure.md
docs/superpowers/specs/: 2026-06-24-breakdown-design.md
scripts/: RECORDING.md  check_deps.sh  smoke_test_providers.py
