[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breakdown"
dynamic = ["version"]
description = "Voice-driven AI code explainer"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[openai]>=1.0",
    "livekit-api>=0.7",
    "litellm>=1.40",
    "lancedb>=0.6",
    "tree-sitter>=0.23",
    "tree-sitter-languages>=1.10",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "loguru>=0.7",
    "watchdog>=4.0",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=3.0",
    "torch>=2.3",
]
chromadb = [
    "chromadb>=0.5",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "basedpyright>=1.14",
    "ruff>=0.5",
]

[project.scripts]
breakdown = "breakdown.cli:app"

[tool.hatch.version]
path = "../VERSION"
pattern = "^(?P<version>[\\d\\.]+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/breakdown"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=breakdown --cov-report=term-missing"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
