[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breakdown"
dynamic = ["version"]
description = "Voice-driven AI code explainer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[openai]>=1.6.4",
    "livekit-api>=1.1.1",
    "litellm>=1.89.3",
    "lancedb>=0.33.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
    "pydantic-settings>=2.14.2",
    "typer>=0.26.7",
    "loguru>=0.7.3",
    "watchdog>=6.0.0",
    "tiktoken>=0.13.0",
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
]
chromadb = [
    "chromadb>=1.5.9",
]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "basedpyright>=1.39.8",
    "ruff>=0.15.19",
]

[project.scripts]
breakdown = "breakdown.cli:app"

[tool.hatch.version]
path = "../VERSION"

[tool.hatch.build.targets.wheel]
packages = ["src/breakdown"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=breakdown --cov-report=term-missing"
markers = ["integration: marks tests as integration tests (may require external services)"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
